tests/errors/comprehensive/E1003_unclosed_comment.ez
/*
 * Error Test: E1003 - unclosed-comment
 * Expected: "unclosed multi-line comment"
 */

do main() {
    /* This comment is never closed
    println("hello")
}
